--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -41,8 +41,11 @@ audio:not([controls]) {
 .aukstis{
   margin:15em auto 0;
 }
-.tarpaiButonam{
-  width:50%;
+.tarpaiTarpLauku{
+    margin:1em auto 0;
+}
+.kaireLygiuote{
+    left: 50px;
 }
 [hidden],
 template {
